# AoC

./: .gitignore  README.md
Year2023/: Cargo.toml
Year2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day12.rs  lib.rs  main.rs  utils.rs
year2023/: Cargo.toml
year2023/src/: day01.rs  day03.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  fun.rs  lib.rs  main.rs  utils.rs
year2024/: Cargo.toml
year2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  lib.rs  main.rs  parser.rs  utils.rs
year2024_Haskell/: day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day09.hs
