[package]
name = "year2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
iter-set = "2.0.2"
itertools = "0.12.0"
nalgebra = "0.32.3"
nom = "7.1.3"
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-rational = "0.4.1"
num-traits = "0.2.17"
petgraph = "0.6.4"
rayon = "1.8.0"
regex = "1.10.2"
smallvec = "1.11.2"
