[package]
name = "year2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
iter-set = "2.0.2"
itertools = "0.12.0"
nom = "7.1.3"
num-integer = "0.1.45"
petgraph = "0.6.4"
priority-queue = "2.1.1"
rayon = "1.8.0"
regex = "1.10.2"
smallvec = "1.11.2"
